# buddy-pi

./: .gitignore  LICENSE  README.md  buddy-pi  buddy-pi.py  config-example.yml  pyproject.toml
models/: hey-buddy.onnx  hey-buddy.ppn  hey-buddy.tflite
