[tool.poetry]
name = "buddy-pi"
version = "0.1.0"
description = "Raspberry Pi based smart speaker"
authors = ["Max Lee <2389838+codesmax@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
